# python-project-template

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .secrets.baseline  Dockerfile  Justfile  LICENSE  README.md  docker-compose.yml  mypy.ini  prek.toml  pyproject.toml  ruff.toml  ty.toml
.github/: copilot-instructions.md
.github/chatmodes/: accessibility.chatmode.md  debug.chatmode.md  gpt-5-beast-mode.chatmode.md  python-mcp-expert.chatmode.md  simple-app-idea-generator.chatmode.md
.github/instructions/: architect-review.instructions.md  django.instructions.md  docker-best-practices.instructions.md  fastapi.instructions.md  frontend.instructions.md  python-pro.instructions.md  python-test.instructions.md  python-v2.instructions.md  python.instructions.md
.github/prompts/: best-practices-review.prompt.md  code-review.prompt.md  consolidate-files.prompt.md  django-code-review.prompt.md
.github/workflows /: python-app.yml
Docker/: Dockerfile  README.md  docker.just
Docker/app/: Dockerfile
Docker/pythonbase/: Dockerfile
Docker/scripts/: build.sh  run.sh
docs/: .pre-commit-config.yaml
docs/architecture/: 0000-adr-template.md  0001-adopt-uv-dependency-cooldowns-with-exclude-newer.md
src/python_project_template/: __init__.py  __main__.py  app.py
tests/: test_app.py
