[project]
name = "python-project-template"
version = "0.1.0"
description = "A template python project"
requires-python = ">=3.10"

license = { file = "LICENSE" }
readme = { file = "README.md", content-type = "text/markdown" }
authors = [{ name = "Diego Gamboa", email = "difegam3@gmail.com" }]

dependencies = ["requests>=2.32.3"]

[project.urls]
Repository = "https://github.com/difegam/python-project-template"

[project.scripts]
app = "python_project_template.app:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "mypy>=1.15.0",
    "pre-commit>=4.2.0",
    "pytest>=8.3.5",
    "ruff>=0.11.6",
]

[tool.uv]
default-groups = ["dev"]

[tool.pytest.ini_options]
addopts = "-vvv"
testpaths = "tests"
pythonpath = "src"
