[project]
name = "python-project-template"
version = "0.1.0"
description = "A template python project"
requires-python = ">=3.12"
license = "MIT"
readme = "README.md"
authors = [{ name = "Diego Gamboa", email = "difegam3@gmail.com" }]
dependencies = ["requests>=2.32.3"]

[project.urls]
Repository = "https://github.com/difegam/python-project-template"

[project.scripts]
app = "python_project_template.app:cli"

[tool.poetry]
packages = [{ include = "python_project_template", from = "src" }]
requires-poetry = ">=2.3"

[dependency-groups]
test = ["pytest>=8.3.5"]
lint = ["ruff>=0.11.6"]
typecheck = ["mypy>=1.15.0", "ty>=0.0.29", "types-requests>=2.32.4.20250611"]
dev = [
    { include-group = "test" },
    { include-group = "lint" },
    { include-group = "typecheck" },
    "pre-commit>=4.2.0",
]

[build-system]
requires = ["poetry-core>=2.3"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = "-vvv"
testpaths = "tests"
pythonpath = "src"
